# DJSHOPR

./: .dockerignore  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pyrightconfig.json
app/Products_app/: models.py
app/app/: settings.py  urls.py
app/products/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
app/products/migrations/: 0001_initial.py  0002_attribute.py  0003_productcategory.py  0004_categoryattribute.py  0005_product.py  0006_alter_product_options_remove_product_title_and_more.py  0007_productattribute_alter_attribute_slug_and_more.py  0008_alter_productattribute_options_and_more.py  0009_remove_attribute_value.py  0010_alter_product_discount_alter_product_rate.py  0011_alter_product_discount_alter_product_price_and_more.py  0012_alter_product_amount_alter_product_discount_and_more.py  0013_rename_category_id_product_category_and_more.py  0014_alter_product_summary.py  0015_alter_product_discount.py  0016_alter_product_price.py  0017_product_image.py  0018_alter_product_image.py
app/products/templates/: base.html  index.html
app/products/templates/products/: base.html  create.html  delete.html  index.html  update.html  view.html
app/user/: admin.py  forms.py  models.py  urls.py  views.py
app/user/migrations/: 0001_initial.py  0002_alter_basketproduct_table.py  0002_basket.py  0003_basketproduct.py  0004_order.py  0005_alter_user_login_alter_user_password_and_more.py
app/user/templates/user/: basket.html
data/redis/: dump.rdb
(+2 files in other folders)
