[tool.poetry]
name = "djshop_restail"
version = "0.1.0"
description = ""
authors = ["RomaMarhatok <r.marhatok@yandex.by>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.2"
uvicorn = "^0.17.4"
psycopg2-binary = "^2.9.3"
celery = "^5.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
